# ece4760-finalproj

./: CMakeLists.txt  JupyterCode.py  README.md  cameraArduino.ino  picture.py  serial_write.py
Lab_2/Animation_Demo/: animation.c  testing_data.h  vga_graphics.c
project/: CMakeLists.txt
project/digitrec/: CMakeLists.txt  digitrec.c  testing_data.h  training_data.h
project/digitrec/libpng-1.6.37/: Makefile  config.status  libpng-config  libpng16.la  libpng16.pc  libtool  png-fix-itxt  pngcp  pngfix  pngimage  pngstest  pngtest  pngunknown  pngvalid  timepng
project/digitrec/libpng-1.6.37/.deps/: png.Plo  pngerror.Plo  pngget.Plo  pngmem.Plo  pngpread.Plo  pngread.Plo  pngrio.Plo  pngrtran.Plo  pngrutil.Plo  pngset.Plo  pngtest.Po  pngtrans.Plo  pngwio.Plo  pngwrite.Plo  pngwtran.Plo  pngwutil.Plo
project/digitrec/libpng-1.6.37/.libs/: libpng16.16.dylib  libpng16.lai  pngcp  pngfix  pngimage  pngstest  pngtest  pngunknown  pngvalid  timepng
project/digitrec/libpng-1.6.37/contrib/libtests/.deps/: pngimage.Po  pngstest.Po  pngunknown.Po  pngvalid.Po  timepng.Po
project/digitrec/libpng-1.6.37/contrib/tools/.deps/: png-fix-itxt.Po  pngcp.Po  pngfix.Po
project/digitrec/libpng-1.6.37/intel/.deps/: filter_sse2_intrinsics.Plo  intel_init.Plo
project/digitrec/libpng-1.6.37/mips/.deps/: filter_msa_intrinsics.Plo  mips_init.Plo
project/digitrec/libpng-1.6.37/powerpc/.deps/: filter_vsx_intrinsics.Plo  powerpc_init.Plo
